--- a/functions/requirements.txt
+++ b/functions/requirements.txt
@@ -4,3 +4,4 @@ idna==3.10 ; python_version >= "3.11" and python_version < "4.0"
 python-dotenv==1.0.1 ; python_version >= "3.11" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.11" and python_version < "4.0"
 urllib3==2.2.3 ; python_version >= "3.11" and python_version < "4.0"
+flask>=2.0.0 ; python_version >= "3.11" and python_version < "4.0"
